dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_GNU_SOURCE

AM_INIT_AUTOMAKE(ulogd, 2.0.1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB(dl, dlopen)
AC_CHECK_HEADER(pcap.h,HAVE_PCAP_H=true)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(socket strerror)

AC_CHECK_HEADER([netlink/netfilter/log.h],,
		[AC_MSG_ERROR([libnl with nfnetlink_log support needed])])

AC_CHECK_HEADER([netlink/netfilter/ct.h],,
		[AC_MSG_ERROR([libnl with ctnetlink support needed])])

AC_MSG_CHECKING(whether libnl has logmark support)
SAVED_LIBS="$LIBS"
LIBS="-lnl"
AC_LINK_IFELSE([AC_LANG_SOURCE([[
#include <netlink/utils.h>
#include <netlink/msg.h>
#include <netlink/netfilter/nfnl.h>
#include <netlink/netfilter/log.h>
main() {
	nfnl_log_test_logmark((void *)0);
	return 0;
}
]])],[AC_MSG_RESULT(yes)
	AC_DEFINE(HAVE_LIBNL_LOGMARK, 1, [Define to 1 if you have libnl with logmark support.])],[AC_MSG_RESULT(no)],)
LIBS="$SAVED_LIBS"

CT_CHECK_POSTGRES_DB()
AM_CONDITIONAL(HAVE_PGSQL, test "x$PQLIBPATH" != "x")

CT_CHECK_MYSQL_DB()
AM_CONDITIONAL(HAVE_MYSQL, test "x$MYSQL_LIB" != "x")

CT_CHECK_SQLITE3_DB()
AM_CONDITIONAL(HAVE_SQLITE3, test "x$SQLITE3_LIB" != "x")

CT_CHECK_PCAP()
AM_CONDITIONAL(HAVE_PCAP, test "x$PCAP_LIB" != "x")


dnl AC_SUBST(DATABASE_DIR)
dnl AC_SUBST(DATABASE_LIB)
dnl AC_SUBST(DATABASE_LIB_DIR)
dnl AC_SUBST(DB_DEF)
dnl AC_SUBST(EXTRA_MYSQL_DEF)
dnl AC_SUBST(EXTRA_PGSQL_DEF)

dnl AC_SUBST(DATABASE_DRIVERS)
dnl AC_SUBST(HAVE_PCAP_H)

dnl AM_CONDITIONAL(HAVE_MYSQL, test x$mysqldir != x)
dnl AM_CONDITIONAL(HAVE_PGSQL, test x$pgsqldir != x)

AC_OUTPUT(doc/Makefile \
	  include/Makefile include/ulogd/Makefile include/libipulog/Makefile \
	  libipulog/Makefile \
	  input/Makefile input/packet/Makefile input/flow/Makefile \
	  filter/Makefile filter/raw2packet/Makefile filter/packet2flow/Makefile \
	  output/Makefile output/pcap/Makefile output/mysql/Makefile output/pgsql/Makefile output/sqlite3/Makefile \
	  src/Makefile Makefile Rules.make)
